--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "hostel",
   "version": "1.0.0",
+  "type": "module",
   "main": "src/server.js",
+  
   "scripts": {
-    "dev": "nodemon src/server.js"
-  },
+  "dev": "nodemon src/server.js"
+}
+,
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -139,7 +142,7 @@
     "loose-envify": "^1.4.0",
     "math-intrinsics": "^1.1.0",
     "minimatch": "^3.1.2",
-    "mongoose": "^8.16.4",
+    "mongoose": "^8.16.5",
     "ms": "^2.1.3",
     "natural-compare": "^1.4.0",
     "object-assign": "^4.1.1",
