--- a/package.json
+++ b/package.json
@@ -140,9 +140,10 @@
     "locate-path": "^6.0.0",
     "lodash.merge": "^4.6.2",
     "loose-envify": "^1.4.0",
+    "mangodb": "^1.0.0",
     "math-intrinsics": "^1.1.0",
     "minimatch": "^3.1.2",
-    "mongoose": "^8.16.5",
+    "mongoose": "^8.17.0",
     "ms": "^2.1.3",
     "natural-compare": "^1.4.0",
     "object-assign": "^4.1.1",
