--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "mangodb": "^1.0.0",
     "math-intrinsics": "^1.1.0",
     "minimatch": "^3.1.2",
+    "mongodb": "^6.18.0",
     "mongoose": "^8.17.0",
     "ms": "^2.1.3",
     "natural-compare": "^1.4.0",
